# first_plugged

./: Cargo.toml  TODO  build.ps1
src/: editor.rs  lib.rs
